--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "html",
     "css"
   ],
-  "author": "Ives van Hoorne",
+  "author": "RecyConnect",
   "license": "MIT",
   "devDependencies": {
     "serve": "11.2.0"
